fix for cta spacing and alignment

--- a/eds/blocks/call-to-action/call-to-action.css
+++ b/eds/blocks/call-to-action/call-to-action.css
@@ -27,7 +27,7 @@
   background: var(--calcite-ui-foreground-1);
   color: var(--calcite-ui-text-1);
   justify-content: center;
-  padding: 0 0 var(--space-32) 0;
+  padding: var(--space-24) 0 var(--space-32) 0;
 }
 
 .section.call-to-action-container .default-content-wrapper {
@@ -92,7 +92,6 @@
 
   > div {
     display: flex;
-    flex-direction: column;
     inline-size: 100%;
 
     > div {
